WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151359
[JSC] TailCalls should not trigger assertion failures when running with the jsc profiler on.
https://bugs.webkit.org/show_bug.cgi?id=151359
Summary
[JSC] TailCalls should not trigger assertion failures when running with the j...
Keith Miller
Reported
2015-11-17 14:27:40 PST
[JSC] TailCalls should not trigger assertion failures when running with the jsc profiler on.
Attachments
Patch
(14.18 KB, patch)
2015-11-17 15:01 PST
,
Keith Miller
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2015-11-17 15:01:32 PST
Created
attachment 265710
[details]
Patch
WebKit Commit Bot
Comment 2
2015-11-17 15:04:11 PST
Attachment 265710
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:4046: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:4048: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:4068: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:4070: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 4 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2015-11-17 16:10:40 PST
Comment on
attachment 265710
[details]
Patch r=me
Keith Miller
Comment 4
2015-11-18 16:01:35 PST
Committed
r192596
: <
http://trac.webkit.org/changeset/192596
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug